# osi_hw2

./: CMakeLists.txt  README.md  agent  agent10.cpp  agent7.cpp  agent8.cpp  cleanup  cleanup10  init_shared_memory.cpp  main.cpp  main7.cpp  run  run10_smokers  run_smokers  smoker  smoker10.cpp  smoker2.cpp  smoker3.cpp  smoker_matches.cpp  smoker_paper.cpp  smoker_tobacco.cpp  smokers  smokers.h
